--- a/index/input-post.mustache
+++ b/index/input-post.mustache
@@ -2,17 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="/styles.css"></link>
+    <title>Post a Blog</title>
   </head>
   <body>
     <h1> Welcome to My Blog Post </h1>
+    <div>
     <a href="/all-post">View All Posts</a>
+    </div>
 
+    <div id="container">
     <form action="/all-post" method="POST">
-      <input type="text" name="title" placeholder="Enter Title..." />
-    </br>
-      <textarea  rows="10" cols="30" name="body" placeholder="Enter Post Here..." /></textarea>
-    </br>
       <select name="category" required>
         <option value="0">Select a Category</option>
         <option value="Food">Food</option>
@@ -22,7 +22,12 @@
         <option value="Other">Other</option>
       </select>
     </br>
+      <input type="text" name="title" placeholder="Enter Title..." />
+    </br>
+      <textarea  rows="50" cols="100" name="body" placeholder="Enter Post Here..." /></textarea>
+    </br>
     <input type="submit" value="Submit">
    </form>
+ </div>
   </body>
 </html>
